cmake_minimum_required(VERSION 2.8.9)
project(Mecacell)
SET(CMAKE_CXX_COMPILER g++-5)
#SET(CMAKE_CXX_COMPILER clang-omp++)
set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -Wall -Wextra -pedantic -fopenmp")
add_subdirectory(mecacell)
add_subdirectory(mecacellviewer)
add_subdirectory(tests)

INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Mecacell")
SET(CPACK_PACKAGE_VENDOR "Jean Disset")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "3")
SET(CPACK_PACKAGE_VERSION_PATCH "10")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
INCLUDE(CPack)
