cmake_minimum_required(VERSION 2.8.9)
project(Mecacell)
#SET(CMAKE_CXX_COMPILER g++-5)
#SET(CMAKE_CXX_COMPILER clang-omp++)
set(CMAKE_CXX_FLAGS "-O3 -std=c++11 -Wall -Wextra -Wundef -Wshadow -Winit-self -pedantic ")
add_subdirectory(mecacell)
add_subdirectory(mecacellviewer)
add_subdirectory(tests)
